# lidar-object-detection

./: CMakeLists.txt
src/: config.json  config1.json  environment.cpp  processPointClouds.cpp  processPointClouds.h  setConfig.h
src/cluster/: CMakeLists.txt  cluster.cpp  cluster.h
src/quiz/cluster/: cluster.cpp  kdtree.h
src/quiz/ransac/: config.json  ransac2d.cpp
src/ransac_impl/: CMakeLists.txt  ransac_impl.cpp  ransac_impl.h
src/sensors/: lidar.h
